# storage/api-docs/api-docs.json
@@ -579,6 +579,40 @@
                 }
             }
         },
+        "/api/region-indices": {
+            "get": {
+                "tags": [
+                    "Regions"
+                ],
+                "summary": "Получить список регионов с индексами",
+                "description": "Возвращает ассоциативный массив регионов, где ключ - числовой индекс, а значение - полное название региона",
+                "operationId": "getRegionIndices",
+                "responses": {
+                    "200": {
+                        "description": "Успешный ответ",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object"
+                                },
+                                "example": {
+                                    "1": "Ярославль и обл.",
+                                    "2": "Казань и Татарстан",
+                                    "3": "Екатеринбург и обл.",
+                                    "4": "Москва и Московская обл.",
+                                    "5": "Владимир и обл.",
+                                    "6": "Тверь и обл.",
+                                    "7": "Калуга и обл.",
+                                    "8": "Тула и обл.",
+                                    "9": "Санкт-Петербург и обл.",
+                                    "10": "Великий Новгород и обл."
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/sliders": {
             "get": {
                 "tags": [
@@ -908,6 +942,10 @@
         {
             "name": "Новости/Контент",
             "description": "Новости/Контент"
+        },
+        {
+            "name": "Regions",
+            "description": "Regions"
         },
         {
             "name": "Слайды",
